syntax = "proto3";

import "CommonReq.proto";

message DataReq {
    string data_type = 2;
}
